feat: finaliza configuração de formatação para todo o projeto
- Move .editorconfig para raiz do projeto
- Expande .editorconfig para incluir Java, YAML, XML, Markdown
- Backend: Spotless Maven plugin já configurado (Google Java Format)
- Frontend: Prettier já configurado com Vue/TypeScript